<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="statsVM"
            type="com.example.android.navigation.StatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAD0C9">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="177dp"
            android:layout_height="122dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            app:srcCompat="@drawable/bx_stats" />

        <TextView
            android:id="@+id/stats_text1"
            style="@style/stats_text_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/stats_text1"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/stats_text2"
            style="@style/stats_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/stats_text2"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.53999996" />

        <TextView
            android:id="@+id/textView5"
            style="@style/stats_num_style"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/One_Dice_stats"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/one_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/stats_num_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/two_Dice_stats"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77" />

        <TextView
            android:id="@+id/one_total"
            style="@style/stats_num_style"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:fontFamily="@font/lato"
            android:hint="@string/two_twelve_text"
            android:textAlignment="center"
            android:textColor="#FC776A"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/stats_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68" />

        <TextView
            android:id="@+id/one_six"
            style="@style/stats_num_style"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:hint="@string/two_twelve_text"
            android:textAlignment="center"
            android:textColor="#FC776A"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/stats_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.36" />

        <TextView
            android:id="@+id/two_twelve"
            style="@style/stats_num_style"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:hint="@string/two_twelve_text"
            android:textAlignment="center"
            android:textColor="#FC776A"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.53999996" />

        <TextView
            android:id="@+id/two_total"
            style="@style/stats_num_style"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:hint="@string/two_twelve_text"
            android:textAlignment="center"
            android:textColor="#FC776A"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.63" />

        <Button
            android:id="@+id/button"
            style="@style/new_button_style"
            android:background="@drawable/stats_button"
            android:onClick="@{() -> statsVM.ClearStats()}"
            android:text="@string/Clear_button_text"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>